# rag-tech

./: .env  README.md  main.py  pyproject.toml
data/: chunk_demo.txt
src/: config.py
src/chunks/: agentic_chunk.py  contextual_chunk.py  semantic_chunk.py  types.py
src/models/: __init__.py  chat_models.py  embedding_models.py
