[project]
name = "rag-tech"
version = "0.1.0"
description = "RAG technology implementations using LlamaIndex."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.14.2",
    "llama-index-embeddings-openai-like>=0.2.2",
    "llama-index-llms-openai-like>=0.5.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
